--- a/cameraTest/Info.plist
+++ b/cameraTest/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Please allow access to take a picture</string>
 </dict>
 </plist>
